project section margin on mobile fixed

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -85,7 +85,7 @@
         justify-content: center;
         flex-direction: column;
         align-items: center;  
-        margin-top: 60vh;
+        margin-top: 90vh;
         max-width: 80vh;
         
     }
